--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,12 +54,22 @@
     <item>Home</item>
 </string-array>
     <string name="title_neueskonto">Neues Bankkonto anlegen</string>
-    <string name="einstellungen_erklaerung1">Sie können bis zu zehn Konten in SuperBank synchronisieren. Fügen Sie mit folgender Schaltfläche ein neues Konto hinzu.</string>
+    <string name="einstellungen_erklaerung1">Sie können bis zu drei Konten in SuperBank synchronisieren. Fügen Sie mit folgender Schaltfläche ein neues Konto hinzu.</string>
     <string name="einstellungen_erklaerung2">Mit dieser Funktion werden sämtliche Daten in SuperBank zurückgesetzt.</string>
-
+    <string name="einstellungen_erklaerung3">Sie können ein Bankkonto entfernen.</string>
+    
       <string-array name="land_spinner_items">
         <item>DE</item>
         <item>EN</item>
+    </string-array>
+    
+       <string-array name="filter_spinner_items">
+        <item>None</item>
+        <item>Base64</item>
+    </string-array>
+    
+       <string-array name="tan_spinner_items">
+        <item>911</item>
     </string-array>
     
 </resources>
